correct renamed application, add run script

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mj147</groupId>
-	<artifactId>dummy-card-game</artifactId>
+	<artifactId>durak-card-game</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>dummy-card-game</name>
+	<name>durak-card-game</name>
 
 	<properties>
 		<java.version>1.8</java.version>
