correct table and player endpoints

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -4,4 +4,4 @@ common.const.error.msg.err003 = Player name is already taken.
 common.const.error.msg.err004 = Age should be greater than zero.
 common.const.error.msg.err005 = Card deck is empty.
 common.const.error.msg.err006 = Table is full.
-
+common.const.error.msg.err007 = Table name is already taken.
